--- a/pom.xml
+++ b/pom.xml
@@ -19,10 +19,10 @@
 	
 	<dependencies>
 	
-		<!-- <dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
-		</dependency> -->
+		</dependency> 
 		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -46,11 +46,11 @@
 			<optional>true</optional>
 		</dependency>
 		
-		<!-- <dependency>
+		<dependency>
 			<groupId>org.mariadb.jdbc</groupId>
 			<artifactId>mariadb-java-client</artifactId>
 			<scope>runtime</scope>
-		</dependency> -->
+		</dependency> 
 		
 		<dependency>
 			<groupId>org.projectlombok</groupId>
