--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,12 @@
 	</properties>
 	
 	<dependencies>
-	
+		<!--  oauth2-client -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-oauth2-client</artifactId>
+		</dependency> 
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
