--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -46,28 +46,24 @@ spring:
             - email
             - public_profile
 
-
-#          
+     
 #          # 네이버는 OAuth2.0 공식 지원대상이 아니라서 provider 설정이 필요하다.
-#          # 요청주소도 다르고, 응답 데이터도 다르기 때문이다.
-#          naver:
-#            client-id: 머시기
-#            client-secret: 머시기
-#            scope:
-#            - name
-#            - email
-#            - profile_image
-#            client-name: Naver # 클라이언트 네임은 구글 페이스북도 대문자로 시작하더라.
-#            authorization-grant-type: authorization_code
-#            redirect-uri: http://localhost:8080/login/oauth2/code/naver
-#
-#        provider:
-#          naver:
-#            authorization-uri: https://nid.naver.com/oauth2.0/authorize
-#            token-uri: https://nid.naver.com/oauth2.0/token
-#            user-info-uri: https://openapi.naver.com/v1/nid/me
-#            user-name-attribute: response # 회원정보를 json의 response 키값으로 리턴해줌.
-#            
-#            
-
-          
+#          # 요청주소도 다르고, 응답 데이터도 다르기 때문이다.  
+#             redirect-uri: http://localhost:8080/login/oauth2/code/
+          naver:
+            client-id: JtUqWrmd6bCwaqVyx_s5
+            client-secret: DoDJydFsaa
+            scope:
+            - name 
+            - email
+            client-name: Naver
+            authorization-grant-type: authorization_code
+            redirect-uri: http://localhost:8080/login/oauth2/code/naver
+            
+        provider: 
+          naver:
+            authorization-uri: https://nid.naver.com/oauth2.0/authorize
+            token-uri: https://nid.naver.com/oauth2.0/token
+            user-info-uri: https://openapi.naver.com/v1/nid/me
+            user-name-attribute: response
+#               회원정보를 json으로 받는데 response라는 키값으로 네이버가 리턴해줌
